[gd_scene load_steps=15 format=3 uid="uid://bynsu5gkn7lj5"]

[ext_resource type="Script" path="res://casino/dice_blackjack.gd" id="1_pp4pc"]
[ext_resource type="AudioStream" uid="uid://dfoqxshe7cg7m" path="res://music/second_dealing_intro.mp3" id="2_4fy5o"]
[ext_resource type="Texture2D" uid="uid://7aq1qkddr2gg" path="res://battle_scene/art/battlebg22.png" id="3_805qw"]
[ext_resource type="Script" path="res://battle_scene/tutorial/background.gd" id="4_575ky"]
[ext_resource type="Texture2D" uid="uid://br7bx0ua0b8sl" path="res://art/ShopDisplay.png" id="4_ofx46"]
[ext_resource type="Texture2D" uid="uid://ckiodcdlonfyy" path="res://dice_roller/dice_roller_art/ChoiceBox.png" id="5_kb3w3"]
[ext_resource type="Texture2D" uid="uid://ud5tw13xkev7" path="res://map_stuff/map_tutorial_stuff/art/coins.png" id="6_ug7yo"]
[ext_resource type="Texture2D" uid="uid://ijh76cfqykaq" path="res://art/New Piskel.png" id="7_t8nl7"]
[ext_resource type="Texture2D" uid="uid://bbd372vk6i1ki" path="res://art/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Wizard/Wizard/Wizard-Idle.png" id="8_so4wt"]
[ext_resource type="Texture2D" uid="uid://csvpmd22afin7" path="res://art/Tiny RPG Character Asset Pack v1.03 -Full 20 Characters/Characters(100x100)/Soldier/Soldier/Soldier-Idle.png" id="9_3eem1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cppdd"]
atlas = ExtResource("8_so4wt")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_qqrgk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cppdd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1pb7r"]
atlas = ExtResource("9_3eem1")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_eliic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pb7r")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="dice_blackjack" type="Node2D"]
z_index = 2
script = ExtResource("1_pp4pc")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_4fy5o")
autoplay = true

[node name="MatBackground" type="Sprite2D" parent="."]
position = Vector2(573, 323)
scale = Vector2(0.778038, 0.778038)
texture = ExtResource("3_805qw")
script = ExtResource("4_575ky")

[node name="CasinoDisplayUI" type="Sprite2D" parent="."]
position = Vector2(179.5, 326.5)
scale = Vector2(5.35156, 5.35156)
texture = ExtResource("4_ofx46")

[node name="PlayerHandUI" type="Sprite2D" parent="."]
position = Vector2(776.938, 561)
scale = Vector2(10.8145, 7.72578)
texture = ExtResource("5_kb3w3")

[node name="CoinImage" type="Sprite2D" parent="."]
position = Vector2(78.9999, 600)
scale = Vector2(3.09473, 3.23789)
texture = ExtResource("6_ug7yo")

[node name="Label1" type="Label" parent="."]
offset_left = 98.0
offset_top = 169.0
offset_right = 263.0
offset_bottom = 185.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Dice to Choose From:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CasinoMessageDisplay" type="Label" parent="."]
offset_left = 55.0
offset_top = 30.0
offset_right = 299.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "> Casino Messages"
autowrap_mode = 3

[node name="CoinDisplay" type="Label" parent="."]
offset_left = 64.0
offset_top = 563.0
offset_right = 191.0
offset_bottom = 647.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnDisplay" type="Label" parent="."]
offset_left = 182.0
offset_top = 561.0
offset_right = 309.0
offset_bottom = 645.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetScore" type="Label" parent="."]
offset_left = 684.0
offset_top = 204.0
offset_right = 844.0
offset_bottom = 279.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Coins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerScore" type="Label" parent="."]
offset_left = 685.0
offset_top = 264.0
offset_right = 843.0
offset_bottom = 348.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Coins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartPosition1" type="Marker2D" parent="."]
position = Vector2(103, 245)

[node name="StartPosition2" type="Marker2D" parent="."]
position = Vector2(103, 319)

[node name="StartPosition3" type="Marker2D" parent="."]
position = Vector2(103, 386)

[node name="StartPosition4" type="Marker2D" parent="."]
position = Vector2(103, 457)

[node name="StartPosition5" type="Marker2D" parent="."]
position = Vector2(103, 522)

[node name="StartPosition6" type="Marker2D" parent="."]
position = Vector2(250, 245)

[node name="StartPosition7" type="Marker2D" parent="."]
position = Vector2(250, 319)

[node name="StartPosition8" type="Marker2D" parent="."]
position = Vector2(250, 386)

[node name="StartPosition9" type="Marker2D" parent="."]
position = Vector2(250, 457)

[node name="StartPosition10" type="Marker2D" parent="."]
position = Vector2(250, 522)

[node name="StartPosition11" type="Marker2D" parent="."]
position = Vector2(533, 563)

[node name="StartPosition12" type="Marker2D" parent="."]
position = Vector2(601, 562)

[node name="StartPosition13" type="Marker2D" parent="."]
position = Vector2(667, 562)

[node name="StartPosition14" type="Marker2D" parent="."]
position = Vector2(731, 561)

[node name="StartPosition15" type="Marker2D" parent="."]
position = Vector2(794, 561)

[node name="PayoutButton" type="Button" parent="."]
offset_left = 874.0
offset_top = 530.0
offset_right = 965.0
offset_bottom = 562.0
text = "Play ( -5 )"

[node name="ResetButton" type="Button" parent="."]
offset_left = 971.0
offset_top = 529.0
offset_right = 1061.0
offset_bottom = 561.0
text = "Reset
"

[node name="ExitButton" type="Button" parent="."]
offset_left = 874.0
offset_top = 565.0
offset_right = 965.0
offset_bottom = 595.0
text = "Exit"

[node name="RulesButton" type="Button" parent="."]
offset_left = 971.0
offset_top = 564.0
offset_right = 1062.0
offset_bottom = 596.0
text = "Rules"

[node name="PlayerPlatform" type="Sprite2D" parent="."]
position = Vector2(557, 413)
scale = Vector2(9, 9)
texture = ExtResource("7_t8nl7")

[node name="DealerPlatform" type="Sprite2D" parent="."]
position = Vector2(1017, 214)
scale = Vector2(9, 9)
texture = ExtResource("7_t8nl7")

[node name="Dealer" type="AnimatedSprite2D" parent="."]
position = Vector2(1011, 160)
scale = Vector2(6.9, 6.9)
sprite_frames = SubResource("SpriteFrames_qqrgk")

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(554, 356)
scale = Vector2(7.36, 7.36)
sprite_frames = SubResource("SpriteFrames_eliic")

[node name="InputBlocker" type="ColorRect" parent="."]
z_index = 1
offset_left = 491.0
offset_top = 521.0
offset_right = 861.0
offset_bottom = 600.0
color = Color(1, 0, 0, 0)

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
